fixed minimap icon spacing

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -273,6 +273,7 @@ div[name="dire"] .liveMatchPlayerName {
   color: white;
   text-align: top;
   padding: 10x 0 10px;
+  margin: 10px 0 10px;
 
 }
 
@@ -360,6 +361,7 @@ video {
 .minimapIcon {
   height: 35px;
   width: auto;
+  padding-right: 7px;
 }
 
 .historyStats {
